# pendulumRbdlMuscod

./: .gitignore  CMakeLists.txt  README.md
DAT/: lsqDataToTrack.csv  lsqDataToTrack.ods  pendulum.dat~
SRC/: PendulumModel.cpp  PendulumModel.h  SplineInterpolator.h  csvtools.cc  csvtools.h  datfileutils.h  pendulum.cc
