CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

PROJECT( "pendulum" CXX C )

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
	${PROJECT_SOURCE_DIR}/CMake/Modules
)

SET(CUSTOM_RBDL_PATH "" CACHE PATH "Path to specific RBDL Installation")


INCLUDE( SimOptDefaults )

FIND_PACKAGE( MUSCOD REQUIRED )  # find and include "MUSCODConfig.cmake"
IF( MUSCOD_FOUND )
	INCLUDE( ${MUSCOD_USE_FILE} )
ENDIF( MUSCOD_FOUND )

FIND_PACKAGE ( PGPLOT REQUIRED )
FIND_PACKAGE ( RBDL REQUIRED LUAMODEL REQUIRED)
FIND_PACKAGE (Lua51 REQUIRED)
FIND_PACKAGE ( Eigen3 3.0.0 )

INCLUDE_DIRECTORIES ( 	${RBDL_INCLUDE_DIR} 
			${EIGEN3_INCLUDE_DIR} )

ADD_LIBRARY ( pendulum
	SRC/pendulum.cc
	SRC/PendulumModel.cpp
	SRC/csvtools.cc
	)

TARGET_LINK_LIBRARIES ( pendulum
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	${LUA_LIBRARIES}	
	${PGPLOT_CPGPLOT_LIBRARY}
	${PGPLOT_PGPLOT_LIBRARY}
	)

message("CUSTOM_RBDL_PATH         :" ${CUSTOM_RBDL_PATH})
message("RBDL_INCLUDE_DIR         :" ${RBDL_INCLUDE_DIR})
message("RBDL_LIBRARY             :" ${RBDL_LIBRARY})
message("RBDL_LUAMODEL_LIBRARY    :" ${RBDL_LUAMODEL_LIBRARY})
message("LUA_LIBRARIES            :" ${LUA_LIBRARIES})
message("EIGEN3_INCLUDE_DIR       :" ${EIGEN3_INCLUDE_DIR})	

EXECUTE_PROCESS(COMMAND mkdir -p ./RES)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/SRC)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/DAT)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/default.plot)
